Background gap fix

--- a/styles-src.css
+++ b/styles-src.css
@@ -33,7 +33,8 @@ body {
 
 @media only screen and (display-mode: standalone) {
     body {
-        background-attachment: scroll;
+        min-height: 100vh;
+        min-height: -webkit-fill-available;
     }
 }
 
